    separate .keyboard files for x2goagent and nxagent.
  * Update 600_nx-X11+nxcompext+nxcompshad_unique-libnames.full.patch. Don't
    patch files that get removed during code reduction.
  * Add 991_fix-hr-typos.full+lite.patch and 991_fix-hr-typos.full.patch.
    Fix several typos in upstream code detected by lintian.
  * Makefile.nx-libs: Don't allow symlinks to point into buildroot.

  * NX code reduction efforts (from 93Mb to 41Mb):
    - Drop more unused code in nx-X11/programs/Xserver/hw/. Do this in
      roll-tarball.sh and in debian/rules alike.
    - Stop shipping unused / very old xterm code.
    - Drop nx-X11/programs/Xserver/hw/xfree86 except of four files symlinked
      to other locations in the source tree at build time.
    - More source tree size reduction by analyzing what exactly of the Mesa
      source code in nx-X11/extras/ is used and what not.
    - Drop more unused folders from tarball release / before .deb package build:
      .  nx-X11/programs/Xserver/miext/shadow/
      .  nx-X11/programs/Xserver/XpConfig/
      .  nx-X11/programs/Xserver/Xprint/
    - Makefile.nx-libs: Don't install Mesa header files into DESTDIR anymore.
    - Unify source tree reduction (debian/rules vs. roll-tarball.sh) via file/
      folder lists in text files named debian/CODE-REDUCTION_*.

  * Debian/Ubuntu packaging:
    + Fully rework the way nx-libs gets packaged for Debian/Ubuntu.
    + Split up libnx-x11 into individual packages.
    + Provide dbg:packages for each bin:package containing binaries.
    + Use Makefile logic to install files into DESTDIR.
    + Provide dev:packages for each lib:package individually.
    + Provide nx-x11proto-*-dev packages for all libnx-* libraries.
    + Install _all_ library files (*.so*) to /usr/lib/<triplet>/, so
      no extra settings of LD_LIBRARY_PATH is necessary.
    + Add Multi-Arch support for Debian based distro versions that
      support Multi-Arch.
    + Support hardened builds for nxcomp* libraries.