@@ -1,3 +1,6 @@
+Description: Add README.NX-redistributed
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+
 --- /dev/null
 +++ b/README.NX-redistributed
 @@ -0,0 +1,42 @@
