@@ -1,3 +1,6 @@
+Description: man page for nxproxy
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+
 --- /dev/null
 +++ b/nxproxy/man/nxproxy.1
 @@ -0,0 +1,27 @@
