@@ -1,3 +1,6 @@
+Description: Fix BIGENDIAN issue in nxcomp (relevant on PPC64 arch)
+Author: Mihai Moldovan <ionic@ionic.de>
+
 --- a/nxcomp/Loop.cpp
 +++ b/nxcomp/Loop.cpp
 @@ -6832,9 +6832,9 @@
