@@ -1,3 +1,6 @@
+Description: Add x2goagent man page
+Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
+
 --- /dev/null
 +++ b/nx-X11/programs/Xserver/hw/nxagent/man/x2goagent.1
 @@ -0,0 +1,35 @@
